--- a/index.html
+++ b/index.html
@@ -1,129 +1,104 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> Template 3</title>
-	<link rel="icon" type="icon/png" href="">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initail-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="temp3style.css">
-</head>
-<body>			
-	<header>
-		<div class="logo">
-			<!--Logo starts here-->
-			<h1>My Charity</h1>
-			<h6>Making more today</h6>
-			<!--Logo ends here-->
-		</div>
-
-		<div class="menu">	
-					<center>
+	<head>
+		<title>Template2</title>
+		<link rel="icon" type="icon/png" href="blue.png">
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="temp2style.css">
+	</head>
+		<body>
+			<header>
+			<!--Header starts here-->
+				<div class="menu">	
 					<ul>
 					<!--Menu starts here-->
 						<li><a href="#">HOME</a></li>
+						<li><a href="#">LINK</a></li>
+						<li><a href="#">LINK</a></li>
 						<li><a href="#">ABOUT US</a></li>
-						<li><a href="#">PROJECTS</a></li>
-						<li><a href="#">BLOG</a></li>
-						<li><a href="#">EVENTS</a></li>
-						<li><a href="#">GALLERY</a></li>
 						<li><a href="#">CONTACT US</a></li>
 					<!--Menu Ends here-->	
-					</ul></center>
-		</div>
-	</header>
+					</ul>
+					<h1>My Website</h1>
+				</div>	
+				<div class="search">		
+					<input type="text" placeholder="Search" height="20px" width="70px">
+				</div>
+				<div class="social">
+					<ul>
+					<!--Social media links starts here-->
+						<li><a href="#"><img src="fb.png" ></a></li>
+						<li><a href="#"><img src="twitter.png"></a></li>
+					<!--Social media links end  s here-->	
+					</ul>	
+				</div>
+			<!--Header starts here-->	
+			</header>
 
-	<section class="one">
-		<center>
-			<h1>WELCOME TO MY CHARITY.</h1>
-			<p>Loerum ispseum Simple dummy text for typing and checking.</p>
-			<button>DONATE NOW</button>
-		</center>
-	</section>
+			<center>
+			<section class="main1">
+				<!--Main section starts here-->
+				<div>
+					<h1>Hello! There</h1>
+					<h3>Welcome to My Home</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ut aliquip ex ea commodo consequat. </p>
+				<!--Main section starts here-->	
+				</div>
+			</section>
 
-	<section class="two">
-		<div class="link">
-			 
-			<a href=""><h1>My Charity</h1></a>
-			<h6>Making more today</h6>
+			<section class="main">
+				<!--Main section starts here-->
+				<div>
+					<h1>Hello! There</h1>
+					<h3>Welcome to My Home</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+				<!--Main section starts here-->	
+				</div>
+			</section>
+
+			<section class="main2">
+				<!--Main section starts here-->
+				<div>
+					<h1>Hello! There</h1>
+					<h3>Welcome to My Home</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ut aliquip ex ea commodo consequat. </p>
+				<!--Main section starts here-->	
+				</div>
+			</section></center>
+
+				<section>
+					<div class="head">
+					<!--Headline section starts here-->
+						<div class="line1">
+							<h1> Headlines 1</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							<input type="button" value="More Info">
+						</div>
+
+						<div class="line2">
+							<h1> Headlines 2</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							<input type="button" value="More Info">
+						</div>	
+
+						<div class="line3">
+							<h1> Headlines 3</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							<input type="button" value="More Info">
+						</div>				
+					<!--Headline section starts here-->
+					</div>
+				</section>
+				
+
+			<footer class="foo">
+			<!--Footer starts here-->
 			
-		</div>
-		<div class="donate">
-			<h1>DONATE NOW</h1>
-			<p>Loerum ispseum Simple dummy text for typing and checking.</p>
-		</div>
-	</section>
+				<p>Copyright &copy; My company 2016</p>
+				<a href="#">CONTACT US</a>
 
-	<section class="three">
-		<div>
-			<form action="get">
-				Sign up for Newsletters<br><input type="text" name="signup" height="50px" width="200px" placeholder="Enter you email" >
-			</form>
-			<p>Loreum ispesum has been industry's standard format for using dummy text.<br>Loreum ispesum has been industry's standard format for using dummy text.</p>
-		</div>
-	</section>
+			<!--Footer ends here-->	
+			</footer>	
 
-	<section class="four">
-		<div>
-			<img src="fbs.png">
-		</div>
-	</section>
-
-	<section class="five">
-		<div>
-			<h2>Date</h2>
-			<p>Loreum ispesum has been industry's standard format for using dummy text.Loreum ispesum has been industry's standard format for using dummy text.</p>
-			<button>More</button>
-		</div>
-
-		<div>
-			<h2>Date</h2>
-			<p>Loreum ispesum has been industry's standard format for using dummy text.Loreum ispesum has been industry's standard format for using dummy text.</p>
-			<button>More</button>
-		</div>
-
-		<div>
-			<h2>Date</h2>
-			<p>Loreum ispesum has been industry's standard format for using dummy text.Loreum ispesum has been industry's standard format for using dummy text.</p>
-			<button>More</button>
-		</div>
-	</section>
-
-	<footer>
-		<div class="foomenu">	
-			<ul>
-			<!--FooMenu starts here-->
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">ABOUT US</a></li>
-				<li><a href="#">PROJECTS</a></li>
-				<li><a href="#">BLOG</a></li>
-				<li><a href="#">EVENTS</a></li>
-				<li><a href="#">GALLERY</a></li>
-				<li><a href="#">CONTACT US</a></li>
-			<!--FooMenu Ends here-->	
-			</ul>
-		</div>
-
-		<section class="contact" >
-			<div class="follow">
-				<h4>Follow Us</h4>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-			</div>
-
-			<div class="newsletter">
-				<h4>Newsletters</h4>
-				<form action="get">
-					Sign up for Newsletters<br><input type="text" name="signup" placeholder="Enter you email">
-				</form>
-				<p>Loreum ispesum has been industry's standard format for using dummy text.<br>Loreum ispesum has been industry's standard format for using dummy text.</p>
-			</div>
-
-			<div class="contdet">
-				<h4>Contact Us</h4>
-				<p>Address:XXX,<br> New Street <br>Phone: XXX-XXX-XXXX</p>
-			</div>
-		</section>
-	</footer>
-</body>
-</html>
+		</body>
+</html>	
